--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,28 @@
+:root {
+  --couleur-fond: white;
+  --couleur-base: red;
+  --couleur-base-foncee: #8B0000;
+}
+
 html {
   font-family: sans-serif;
+  font-size: 16px;
+  background-color: var(--couleur-fond);
 }
 
 /* Votre CSS ci-dessous */
+p {
+  width: 250px;
+  margin: auto;
+  line-height: 200px;
+  text-align: center;
+  /*J'ai calculé la valeur de la taille de la police voulu, divisé avec la taille de la police de base*/
+  font-size: 1.125rem;
+  background-color: var(--couleur-base);
+  color: var(--couleur-fond);
+  text-shadow: 1px 1px 2px black;
+  border: 1px solid var(--couleur-base-foncee);
+  border-radius: 10px;
+  background-image: linear-gradient(to top left, rgba(0,0,0,.2), 30% ,rgba(0,0,0,0));
+  box-shadow: 2px 2px 5px black, 1px 1px 5px white inset, -1px -1px 5px black inset;
+}
